Replace x with multiplication sign